<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationName">

    <include layout="@layout/logo_main"/>

    <TextView
        android:id="@+id/have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:text="@string/q_name_des"
        android:textColor="#454545"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="34dp"
        android:text="@string/q_name"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <EditText
        android:id="@+id/get_first_name"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_border"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/f_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#494949"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_bg"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/get_last_name"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_border"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/l_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#494949"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/get_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry,TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>